--- a/partials/stats.html
+++ b/partials/stats.html
@@ -63,7 +63,8 @@
 
     <!-- RIGHT -->
     <div class="collection-image">
-        <img src="../assets/images/frame.png" alt="Perfume spray in hand" class="spray-img" loading="lazy" />
+        <img src="../assets/images/frame.png" alt="Perfume spray in hand" class="spray-img" loading="lazy" width="400"
+            height="600" decoding="async" />
     </div>
 
 </div>
