--- a/css/animations.css
+++ b/css/animations.css
@@ -2,8 +2,9 @@
 @keyframes fadeInUp {
     from {
         opacity: 0;
-        transform: translate3d(0, 30px, 0);
+        transform: translate3d(0, 1.875rem, 0);
     }
+
     to {
         opacity: 1;
         transform: translate3d(0, 0, 0);
