--- a/css/components.css
+++ b/css/components.css
@@ -1,9 +1,9 @@
 :root {
     /* Button Border Radius */
-    --border-radius: 500px;
+    --border-radius: 31.25rem;
 
-    --radio-primay-size: 18px;
-    --radio-secondary-size: 12px;
+    --radio-primay-size: 1.125rem;
+    --radio-secondary-size: 0.75rem;
 }
 
 /* Buttons Style */
@@ -12,12 +12,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 16px 28px;
+    padding: 1rem 1.75rem;
     border: none;
     border-radius: var(--border-radius);
     cursor: pointer;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1rem;
     transition: all 0.3s ease;
     font-family: var(--font-family-primary);
     text-align: center;
@@ -31,7 +31,7 @@
 .btn-secondary {
     background: var(--gradient-button-secondary);
     color: var(--color-white);
-    height: 40px;
+    height: 2.5rem;
 }
 
 .btn-accent {
@@ -41,18 +41,18 @@
 }
 
 .btn-sm {
-    height: 40px;
-    font-size: 16px;
+    height: 2.5rem;
+    font-size: 1rem;
 }
 
 .btn-md {
-    height: 50px;
-    font-size: 18px;
+    height: 3.125rem;
+    font-size: 1.125rem;
 }
 
 .btn-lg {
-    height: 60px;
-    font-size: 20px;
+    height: 3.75rem;
+    font-size: 1.25rem;
 }
 
 .icon-button {
