--- a/css/layout.css
+++ b/css/layout.css
@@ -479,48 +479,48 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 145px;
-    /* padding: 0 64px; */
+    margin-top: 9.0625rem;
+    /* padding: 0 4rem; */
 }
 
 /* LEFT */
 .collection-title {
     font-weight: 600;
-    font-size: 36px;
-    margin-bottom: 32px;
+    font-size: 2.25rem;
+    margin-bottom: 2rem;
 }
 
 .accordion {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 0.9375rem;
 }
 
 /* ACCORDION */
 .accordion-item {
     background-color: #fff;
-    border-radius: 8px;
-    border: 1px solid var(--accordion-border);
-    width: 626px;
+    border-radius: 0.5rem;
+    border: 0.0625rem solid var(--accordion-border);
+    width: 39.125rem;
     overflow: hidden;
     transition: height 0.4s ease;
 }
 
 .accordion-header {
-    padding: 24px 32px;
+    padding: 1.5rem 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 1.25rem;
     color: var(--color-primary);
 }
 
 .accordion-icon {
     position: relative;
-    width: 24px;
-    height: 24px;
+    width: 1.5rem;
+    height: 1.5rem;
     background-image: url("../assets/images/icons/plus.svg");
     background-repeat: no-repeat;
     background-position: center;
@@ -536,18 +536,18 @@
 }
 
 .accordion-body {
-    padding: 24px;
+    padding: 1.5rem;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 1rem;
     color: var(--accordion-body);
 }
 
 /* RIGHT IMAGE */
 .collection-image .spray-img {
-    width: 587px;
-    height: 712px;
+    width: 36.6875rem;
+    height: 44.5rem;
     object-fit: cover;
-    border-radius: 20px;
+    border-radius: 1.25rem;
 }
 
 /* Collection Styles Ends */
@@ -560,28 +560,28 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 6.25rem;
     background: var(--gradient-bg);
-    padding: 56px 0px;
+    padding: 3.5rem 0rem;
 }
 
 .stat-item {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 8px;
-    width: 215px;
+    gap: 0.5rem;
+    width: 13.4375rem;
 
     .stat-number {
         font-weight: 700;
-        font-size: 40px;
+        font-size: 2.5rem;
         text-align: center;
         color: var(--color-white);
     }
 
     .stat-label {
         font-weight: 300;
-        font-size: 16px;
+        font-size: 1rem;
         text-align: center;
         color: var(--color-white);
     }
@@ -736,13 +736,13 @@ td.comparison-align-left {
 .site-footer {
     background-color: var(--color-primary);
     color: var(--color-white);
-    padding: 64px 0px;
-    margin-top: 105px;
+    padding: 4rem 0rem;
+    margin-top: 6.5625rem;
 
     .footer-container {
         display: flex;
         flex-direction: column;
-        gap: 64px;
+        gap: 4rem;
         max-width: 100%;
     }
 
@@ -750,8 +750,8 @@ td.comparison-align-left {
 
     .footer-brand {
         font-weight: 700;
-        font-size: 42px;
-        margin-bottom: 40px;
+        font-size: 2.625rem;
+        margin-bottom: 2.5rem;
     }
 
     .footer-content {
@@ -762,7 +762,7 @@ td.comparison-align-left {
     .footer-links {
         display: flex;
         align-items: center;
-        gap: 150px;
+        gap: 9.375rem;
     }
 
     .footer-links ul {
@@ -772,30 +772,30 @@ td.comparison-align-left {
     }
 
     .footer-links li {
-        margin-bottom: 20px;
+        margin-bottom: 1.25rem;
     }
 
     .footer-links a {
         display: flex;
         align-items: center;
-        gap: 12px;
+        gap: 0.75rem;
         text-decoration: none;
         font-weight: 300;
-        font-size: 14px;
+        font-size: 0.875rem;
         font-family: var(--font-family-secondary);
     }
 
     /* Social */
     .social-links .icon {
         display: inline-block;
-        width: 24px;
-        height: 24px;
+        width: 1.5rem;
+        height: 1.5rem;
     }
 
     /* Right section */
     .footer-right {
         flex: 1;
-        max-width: 520px;
+        max-width: 32.5rem;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
