--- a/partials/header.html
+++ b/partials/header.html
@@ -16,7 +16,8 @@
                 <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Shop
-                        <img src="../assets/images/icons/chevron_down.svg" alt="arrow down" class="dropdown-icon">
+                        <img src="../assets/images/icons/chevron_down.svg" alt="arrow down" class="dropdown-icon"
+                            width="12" height="12" decoding="async">
                     </a>
                 </li>
                 <li class="nav-item"><a href="#" class="nav-link">Fragrances</a></li>
@@ -26,14 +27,16 @@
             </ul>
         </nav>
         <div class="flex flex-center gap-12 header-actions">
-            <img src="../assets/images/icons/search.svg" alt="Search" class="search-icon">
+            <img src="../assets/images/icons/search.svg" alt="Search" class="search-icon" width="24" height="24"
+                decoding="async">
             <button class="btn btn-primary btn-md">Shop Now</button>
         </div>
     </div>
 
     <div class="banner-content">
         <button class="btn btn-secondary btn-sm">
-            <img src="../assets/images/icons/medal.svg" alt="Medal" class="medal-icon">
+            <img src="../assets/images/icons/medal.svg" alt="Medal" class="medal-icon" width="16" height="16"
+                decoding="async">
             Awarded the best perfume in the world
         </button>
         <h2 class="banner-title">Live your best life.</h2>
