--- a/partials/table.html
+++ b/partials/table.html
@@ -1,4 +1,3 @@
-
 <div class="comparison">
 	<div class="comparison-header">
 		<span class="comparison-divider">---</span>
@@ -11,25 +10,29 @@
 					<th class="comparison-cell comparison-cell-head comparison-align-left">Qualities</th>
 					<th class="comparison-cell comparison-cell-head comparison-highlight comparison-highlight-top">
 						<div class="comparison-brand-img">
-							<img src="../assets/images/gtg-bottle.png" alt="GTG bottle" loading="lazy" />
+							<img src="../assets/images/gtg-bottle.png" alt="GTG bottle" loading="lazy" width="60"
+								height="60" decoding="async" />
 						</div>
 						<span class="comparison-brand-name">GTG</span>
 					</th>
 					<th class="comparison-cell comparison-cell-head">
 						<div class="comparison-brand-img">
-							<img src="../assets/images/preview_1.png" alt="Arose bottle" loading="lazy" />
+							<img src="../assets/images/preview_1.png" alt="Arose bottle" loading="lazy" width="60"
+								height="60" decoding="async" />
 						</div>
 						<span class="comparison-brand-name">Arose</span>
 					</th>
 					<th class="comparison-cell comparison-cell-head">
 						<div class="comparison-brand-img">
-							<img src="../assets/images/preview_3.png" alt="Bella bottle" loading="lazy" />
+							<img src="../assets/images/preview_3.png" alt="Bella bottle" loading="lazy" width="60"
+								height="60" decoding="async" />
 						</div>
 						<span class="comparison-brand-name">Bella</span>
 					</th>
 					<th class="comparison-cell comparison-cell-head">
 						<div class="comparison-brand-img">
-							<img src="../assets/images/preview_4.png" alt="Daisies bottle" loading="lazy" />
+							<img src="../assets/images/preview_4.png" alt="Daisies bottle" loading="lazy" width="60"
+								height="60" decoding="async" />
 						</div>
 						<span class="comparison-brand-name">Daisies</span>
 					</th>
@@ -45,17 +48,25 @@
 				</tr>
 				<tr>
 					<td class="comparison-cell comparison-align-left">Longevity</td>
-					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-check-outline" aria-label="Yes"></span></td>
+					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check"
+							aria-label="Yes"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
+							aria-label="No"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
+							aria-label="No"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-check-outline"
+							aria-label="Yes"></span></td>
 				</tr>
 				<tr>
 					<td class="comparison-cell comparison-align-left">Sillage</td>
-					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
+					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check"
+							aria-label="Yes"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
+							aria-label="No"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
+							aria-label="No"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
+							aria-label="No"></span></td>
 				</tr>
 				<tr>
 					<td class="comparison-cell comparison-align-left">Bottle Design Score</td>
@@ -66,31 +77,47 @@
 				</tr>
 				<tr>
 					<td class="comparison-cell comparison-align-left">Blend and Harmony</td>
-					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
+					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check"
+							aria-label="Yes"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
+							aria-label="No"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
+							aria-label="No"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
+							aria-label="No"></span></td>
 				</tr>
 				<tr>
 					<td class="comparison-cell comparison-align-left">Skin Compatibility</td>
-					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
+					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check"
+							aria-label="Yes"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
+							aria-label="No"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
+							aria-label="No"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
+							aria-label="No"></span></td>
 				</tr>
 				<tr>
 					<td class="comparison-cell comparison-align-left">Scent Profile</td>
-					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-check-outline" aria-label="Yes"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
+					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check"
+							aria-label="Yes"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-check-outline"
+							aria-label="Yes"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
+							aria-label="No"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
+							aria-label="No"></span></td>
 				</tr>
 				<tr>
 					<td class="comparison-cell comparison-align-left">Price vs. Quality</td>
-					<td class="comparison-cell comparison-highlight comparison-highlight-bottom"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-check-outline" aria-label="Yes"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
-					<td class="comparison-cell"><span class="comparison-icon comparison-icon-check-outline" aria-label="Yes"></span></td>
+					<td class="comparison-cell comparison-highlight comparison-highlight-bottom"><span
+							class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-check-outline"
+							aria-label="Yes"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
+							aria-label="No"></span></td>
+					<td class="comparison-cell"><span class="comparison-icon comparison-icon-check-outline"
+							aria-label="Yes"></span></td>
 				</tr>
 			</tbody>
 		</table>
