Gallery section icon update

--- a/partials/product.html
+++ b/partials/product.html
@@ -5,7 +5,7 @@
                 fetchpriority="high" width="500" height="500" decoding="async">
             <div class="product-nav">
                 <button class="icon-button left-arrow-button" aria-label="Previous Image">
-                    <img src="../assets/images/icons/slider_arrow_left.svg" alt="Left Arrow" width="24" height="24">
+                    <img src="../assets/images/icons/slider_arrow_left.svg" alt="Left Arrow" width="38" height="38">
                 </button>
                 <div class="flex slider-pagination">
                     <img src="../assets/images/icons/slider_dot_filled.svg" alt="Active Dot" width="8" height="8">
@@ -14,14 +14,14 @@
                     <img src="../assets/images/icons/slider_dot_empty.svg" alt="Empty Dot" width="8" height="8">
                 </div>
                 <button class="icon-button right-arrow-button" aria-label="Next Image">
-                    <img src="../assets/images/icons/slider_arrow_right.svg" alt="Right Arrow" width="24" height="24">
+                    <img src="../assets/images/icons/slider_arrow_right.svg" alt="Right Arrow" width="38" height="38">
                 </button>
             </div>
         </div>
         <div class="product-thumbnails">
             <div class="flex flex-space-between">
-                <img src="../assets/images/preview_1.png" alt="Preview 1" class="preview-img" loading="lazy" width="80"
-                    height="80" decoding="async">
+                <img src="../assets/images/preview_original.png" alt="Preview 1" class="preview-img" loading="lazy"
+                    width="80" height="80" decoding="async">
                 <img src="../assets/images/preview_2.png" alt="Preview 2" class="preview-img" loading="lazy" width="80"
                     height="80" decoding="async">
                 <img src="../assets/images/preview_3.png" alt="Preview 3" class="preview-img" loading="lazy" width="80"
