--- a/partials/product.html
+++ b/partials/product.html
@@ -280,6 +280,10 @@
                     </div>
                 </div>
             </div>
+
+            <div class="checkout-actions" style="margin-top: 2rem;">
+                <button id="add-to-cart" class="btn btn-primary btn-lg btn-fullwidth">Add to Cart</button>
+            </div>
         </div>
     </div>
 </div>
