--- a/partials/table.html
+++ b/partials/table.html
@@ -7,29 +7,30 @@
 		<table class="comparison-table" role="table">
 			<thead>
 				<tr>
-					<th class="comparison-cell comparison-cell-head comparison-align-left">Qualities</th>
-					<th class="comparison-cell comparison-cell-head comparison-highlight comparison-highlight-top">
+					<th scope="col" class="comparison-cell comparison-cell-head comparison-align-left">Qualities</th>
+					<th scope="col"
+						class="comparison-cell comparison-cell-head comparison-highlight comparison-highlight-top">
 						<div class="comparison-brand-img">
 							<img src="../assets/images/gtg-bottle.png" alt="GTG bottle" loading="lazy" width="60"
 								height="60" decoding="async" />
 						</div>
 						<span class="comparison-brand-name">GTG</span>
 					</th>
-					<th class="comparison-cell comparison-cell-head">
+					<th scope="col" class="comparison-cell comparison-cell-head">
 						<div class="comparison-brand-img">
 							<img src="../assets/images/preview_1.png" alt="Arose bottle" loading="lazy" width="60"
 								height="60" decoding="async" />
 						</div>
 						<span class="comparison-brand-name">Arose</span>
 					</th>
-					<th class="comparison-cell comparison-cell-head">
+					<th scope="col" class="comparison-cell comparison-cell-head">
 						<div class="comparison-brand-img">
 							<img src="../assets/images/preview_3.png" alt="Bella bottle" loading="lazy" width="60"
 								height="60" decoding="async" />
 						</div>
 						<span class="comparison-brand-name">Bella</span>
 					</th>
-					<th class="comparison-cell comparison-cell-head">
+					<th scope="col" class="comparison-cell comparison-cell-head">
 						<div class="comparison-brand-img">
 							<img src="../assets/images/preview_4.png" alt="Daisies bottle" loading="lazy" width="60"
 								height="60" decoding="async" />
@@ -40,14 +41,14 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td class="comparison-cell comparison-align-left">Potency Concentration</td>
+					<td scope="row" class="comparison-cell comparison-align-left">Potency Concentration</td>
 					<td class="comparison-cell comparison-highlight">10x</td>
 					<td class="comparison-cell">1x</td>
 					<td class="comparison-cell">1x</td>
 					<td class="comparison-cell">10x</td>
 				</tr>
 				<tr>
-					<td class="comparison-cell comparison-align-left">Longevity</td>
+					<td scope="row" class="comparison-cell comparison-align-left">Longevity</td>
 					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check"
 							aria-label="Yes"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
@@ -58,7 +59,7 @@
 							aria-label="Yes"></span></td>
 				</tr>
 				<tr>
-					<td class="comparison-cell comparison-align-left">Sillage</td>
+					<td scope="row" class="comparison-cell comparison-align-left">Sillage</td>
 					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check"
 							aria-label="Yes"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
@@ -69,14 +70,14 @@
 							aria-label="No"></span></td>
 				</tr>
 				<tr>
-					<td class="comparison-cell comparison-align-left">Bottle Design Score</td>
+					<td scope="row" class="comparison-cell comparison-align-left">Bottle Design Score</td>
 					<td class="comparison-cell comparison-highlight">9</td>
 					<td class="comparison-cell">5</td>
 					<td class="comparison-cell">6</td>
 					<td class="comparison-cell">2</td>
 				</tr>
 				<tr>
-					<td class="comparison-cell comparison-align-left">Blend and Harmony</td>
+					<td scope="row" class="comparison-cell comparison-align-left">Blend and Harmony</td>
 					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check"
 							aria-label="Yes"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
@@ -87,7 +88,7 @@
 							aria-label="No"></span></td>
 				</tr>
 				<tr>
-					<td class="comparison-cell comparison-align-left">Skin Compatibility</td>
+					<td scope="row" class="comparison-cell comparison-align-left">Skin Compatibility</td>
 					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check"
 							aria-label="Yes"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross"
@@ -98,7 +99,7 @@
 							aria-label="No"></span></td>
 				</tr>
 				<tr>
-					<td class="comparison-cell comparison-align-left">Scent Profile</td>
+					<td scope="row" class="comparison-cell comparison-align-left">Scent Profile</td>
 					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check"
 							aria-label="Yes"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-check-outline"
@@ -109,7 +110,7 @@
 							aria-label="No"></span></td>
 				</tr>
 				<tr>
-					<td class="comparison-cell comparison-align-left">Price vs. Quality</td>
+					<td scope="row" class="comparison-cell comparison-align-left">Price vs. Quality</td>
 					<td class="comparison-cell comparison-highlight comparison-highlight-bottom"><span
 							class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-check-outline"
