--- a/partials/product.html
+++ b/partials/product.html
@@ -281,7 +281,7 @@
                 </div>
             </div>
 
-            <div class="checkout-actions" style="margin-top: 2rem;">
+            <div class="checkout-actions">
                 <button id="add-to-cart" class="btn btn-primary btn-lg btn-fullwidth">Add to Cart</button>
             </div>
         </div>
